--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 geographiclib==1.49
 geopy==1.13.0
+gunicorn==19.7.1
 idna==2.6
 infinity==1.4
 intervals==0.8.1
