--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.0
 polyline==1.3.2
+psycopg2==2.7.4
 python-dateutil==2.7.2
 python-dotenv==0.8.2
 python-editor==1.0.3
