--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==0.9.9
 arrow==0.12.1
+boto==2.48.0
 certifi==2018.1.18
 chardet==3.0.4
 click==6.7
@@ -8,10 +9,13 @@ decorator==4.2.1
 dominate==2.3.1
 Flask==0.12.2
 Flask-Bootstrap==3.3.7.1
+Flask-CDN==1.5.3
 Flask-Login==0.4.1
 Flask-Migrate==2.1.1
+Flask-S3-gzip==0.1.8
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+futures==3.1.1
 geographiclib==1.49
 geopy==1.13.0
 gunicorn==19.7.1
@@ -30,7 +34,7 @@ python-editor==1.0.3
 pytz==2018.4
 requests==2.18.4
 six==1.11.0
-SQLAlchemy==1.2.6
+SQLAlchemy==1.2.7
 stravalib==0.9.1
 units==0.7
 urllib3==1.22
