--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ WTForms = "^2.2"
 WTForms-Components = "^0.10.4"
 Flask-SQLAlchemy = "^2.4"
 googlemaps = "^3.1"
-motionless = "^1.3"
+motionless = "^1.3,<1.3.2"
 DateTime = "^4.3"
 Flask-Bootstrap = "^3.3"
 Flask-CDN = "^1.5"
