--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ stravalib = "~0.10"
 flask_wtf = "^0.14.2"
 python-dotenv = "^0.10.3"
 geopy = "^1.20"
+gunicorn = "^20.0.4"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
