--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ flask-wtf==0.14.2
 geographiclib==1.50
 geopy==1.20.0
 googlemaps==3.1.4
+gunicorn==20.0.4
 idna==2.8
 infinity==1.4
 intervals==0.8.1
