--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ jinja2==2.10.3
 mako==1.1.0
 markupsafe==1.1.1
 motionless==1.3.1
+psycopg2==2.8.4
 python-dateutil==2.8.1
 python-dotenv==0.10.3
 python-editor==1.0.4
